add: criação sétimo desafio

--- a/Logica 5.html
+++ b/Logica 5.html
@@ -15,7 +15,7 @@
 
         var media = soma/numeros.length;
 
-        var mensagem = "O número digitado é"
+        var mensagem = "Os números digitados são"
         for(i=0;i<6;i++) {
             if(i==5){
                 mensagem += " " + numeros[i] + ".";
